--- a/main.css
+++ b/main.css
@@ -5,3 +5,12 @@
   position: relative;
   padding: 0 4%;
 }
+.header {
+  position: fixed;
+  top: 0px;
+  height: 50px;
+  background: #F0F0F0;
+  border: 1px solid #CCC;
+  width: 960px;
+  margin: 0px auto;
+}
