--- a/main.css
+++ b/main.css
@@ -1,16 +1,24 @@
 .page {
   width: 100%;
   margin: 0.25em auto;
-  max-width: 1800px;
+  max-width: 800px;
   position: relative;
   padding: 0 4%;
+}
+.header:before {
+  
 }
 .header {
   position: fixed;
   top: 0px;
   height: 50px;
-  background: #F0F0F0;
+  background: #FFFFFF;
+  
   border: 1px solid #CCC;
-  width: 960px;
+  width: 100%;
   margin: 0px auto;
+}
+.content {
+  position: relative;
+  padding-top: 52px;
 }
