--- a/main.css
+++ b/main.css
@@ -1,9 +1,8 @@
 .page {
   width: 100%;
-  margin: 0.25em auto;
+  margin: 0 auto;
   max-width: 800px;
   position: relative;
-  padding: 0 4%;
 }
 .header:before {
   
