--- a/main.css
+++ b/main.css
@@ -3,18 +3,21 @@ body {
     padding: 0;
 }
 .page {
-  width: 90%;
-  margin: auto;
-  position: relative;
+    width: 90%;
+    margin: auto;
 }
 .header {
-  position: fixed;
-  top: 0px;
-  height: 50px;
-  width: 90%;
-  margin: auto;
-  background: #FFFFFF;
-  border: 1px solid #CCC;
+    position: fixed;
+    top: 0px;
+    height: 50px;
+    width: 90%;
+    margin: auto;
+    background: #000000;
+    border: 1px solid #CCC;
+    color: #FFFFFF
+}
+h1 {
+    text-align: right;
 }
 .content {
   position: relative;
