--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ body {
     height: 50px;
     width: 90%;
     margin: auto;
+    padding: 2%;
     background: #000000;
     border: 1px solid #CCC;
     color: #FFFFFF
