--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
 .header {
     position: fixed;
     top: 0px;
-    height: 50px;
+    height: 10%;
     width: 90%;
     margin: auto;
     padding: 2%;
@@ -30,5 +30,5 @@ h1 {
 }
 .content {
   position: relative;
-  padding-top: 2%;
+  padding-top: 12%;
 }
