--- a/main.css
+++ b/main.css
@@ -18,8 +18,8 @@ body {
     width: 90%;
     margin: auto;
     padding: 2%;
-    background: #000000;
-    border: 0.25em solid #CCC;
+    background: #2D73A8;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     color: #FFFFFF
 }
 h1 {
