--- a/main.css
+++ b/main.css
@@ -6,30 +6,36 @@
 body {
     margin: 0;
     padding: 0;
-    background: #92DBB5;
+    background: #FFFFFF;
 }
 .page {
-    width: 90%;
+    width: 100%;
     margin: auto;
 }
 .header {
     position: fixed;
     top: 0px;
-    height: 10%;
-    width: 90%;
+    height: 80px;
+    width: 100%;
     margin: auto;
-    padding: 2%;
-    background: #2D73A8;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    color: #FFFFFF
+    padding: 29px;
+    background: #4DC6D6;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 0 0 0;
+    color: #FFFFFF;
 }
 h1 {
     font-family: sans-serif;
     text-align: right;
+    vertical-align: middle;
     font-size: 1.25em;
     font-style: bold;
 }
 .content {
   position: relative;
-  padding-top: 15%;
+  margin-top: 80px;
+}
+div.info {
+    width: 250px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
 }
