--- a/main.css
+++ b/main.css
@@ -64,14 +64,17 @@ div.item img {
   border: solid #CFF3FC;
 }
 form {
+  margin: 16px;
     height: 2em;
-    width: 100%;
-    margin: auto;    
+    width: 100%;  
     background: #DDD;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 0 0 0;
-    color: #FFFFFF;
-    vertical-align: middle;
+    color: #000;
+}
+form * {
+  display: inline;
+  margin: .5em 5px;
 }
 form h2 {
-  text-align: left;
+  padding: 0;
 }
