--- a/main.css
+++ b/main.css
@@ -76,6 +76,10 @@ form {
 }
 form div {
   display: inline-block;
+  margin: 2px 0;
+  padding: 0 16px;
+  background: rgba(0,0,0,0.1);
+  border: white solid thin;
 }
 form div * {
   margin: .5em 5px;
