--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ body {
     background: #4DC6D6;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 0 0 0;
     color: #FFFFFF;
+    z-index: 10;
 }
 h1 {
     font-family: 'Kaushan Script', cursive;
@@ -49,15 +50,28 @@ h3 {
   position: relative;
   margin-top: 80px;
   padding: 29px;
+  text-align: center;
 }
 div.info {
+    margin: 0 auto;
     width: 250px;
     padding: 16px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
     background: #EA3131;
     color: white;
-    float: left;
+}
+#next-item {
+  position: relative;
+  left: 75px;
+  bottom: 60px;
+  z-index: -1;
+}
+#next-item:hover {
+  position: relative;
+  right: 150px;
+  top: 70px;
+  z-index: 1;
 }
 div.item img {
     max-width: 64px;
