--- a/main.css
+++ b/main.css
@@ -119,9 +119,27 @@ form h2 {
 #tpspread {
   display: none;
 }
+#ingredientsCP {
+  line-height: 0;
+}
 #ingredientsCP li {
-  float: left;
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  width: 64px;
+  height: 64px;
+  line-height: 1;
 }
 #ingredientsCP img {
   width: 64px;
+}
+.count {
+  font-size: 1.5em;
+  position: absolute;
+  bottom: 6px;
+  right: 6px;
+  color: gold;
+  font-weight: bold;
+  text-shadow: 2px 2px black;
 }
