--- a/main.css
+++ b/main.css
@@ -151,3 +151,12 @@ form h2 {
   font-weight: bold;
   text-shadow: 2px 2px black;
 }
+#craft-profit-calc {
+  position: fixed;
+  background: white;
+  border: goldenrod solid medium;
+  top: 25%;
+  left: 20%;
+  width: 60%;
+  padding: 15px;
+}
