--- a/main.css
+++ b/main.css
@@ -158,5 +158,8 @@ form h2 {
   top: 25%;
   left: 20%;
   width: 60%;
-  padding: 15px;
+  padding: 5px 0;
+}
+#craft-profit-calc h2 {
+  line-height: 1em;
 }
