--- a/templates/stackitem.html
+++ b/templates/stackitem.html
@@ -1,4 +1,4 @@
-<div class="info item stack" id="">
+<div class="info item stack" id="{item-id}">
   <h3 class="item-name"></h3>
   <img src="#" alt="" class="item-icon"/>
   <dl>
